--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <a href="index.html">
-            <h1>Love Runinng</h1>
+            <h1 id="logo">Love Runinng</h1>
         </a>
         <nav>
             <ul>
