--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
         <div id="hero-image"></div>
         <div id="cover-text">
             <h2>Love Running</h2>
-            <h3>Dublin Docklands & Pheonix Park</h3>
+            <h3>Dublin Docklands & Phoenix Park</h3>
         </div>
     </section>
     <section id="club-ethos">
-        <h2>Why Love Running WIth Us?</h2>
+        <h2 id="welcome">Why Love Running With Us?</h2>
         <div id="left-about">
             <div class="left-about-heading">
                 <h2>Feel Healthy <i class="fa-solid fa-heart-pulse"></i></h2>
@@ -85,7 +85,7 @@
             <h2>Trail <i class="fa-solid fa-tree"></i></h2>
             <h3>Wednesday</h3>
             <h3>10k</h3>
-            <h3>Pheonix Park</h3>
+            <h3>Phoenix Park</h3>
             <h3>18:30</h3>
         </div>
         <div>
@@ -99,7 +99,7 @@
             <h2>Trail <i class="fa-solid fa-tree"></i></h2>
             <h3>Saturday</h3>
             <h3>10k</h3>
-            <h3>Pheonix Park</h3>
+            <h3>Phoenix Park</h3>
             <h3>09:30</h3>
         </div>
         <div>
